@@ -5,31 +5,30 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.scheduling.annotation.Async;
 import org.springframework.web.bind.annotation.*;
 
-import java.io.IOException;
-import java.nio.file.Files;
-import java.nio.file.Path;
-import java.nio.file.Paths;
+import java.io.InputStream;
 import java.util.concurrent.CompletableFuture;
 
 @RestController
 @RequestMapping("/api/legals")
 public class LegalController {
 
-    private static final String AGB_FILE_PATH = "/app/AGBsDayQuest.md/";
-    private static final String DATENSCHUTZ_FILE_PATH = "/app/DatenschutzDayQuest.md/";
+    private static final String AGB_FILE_PATH = "AGBsDayQuest.md";
+    private static final String DATENSCHUTZ_FILE_PATH = "DatenschutzDayQuest.md";
 
     @GetMapping(value = "/agb", produces = "text/markdown")
     @Async
     public CompletableFuture<ResponseEntity<byte[]>> getAgb() {
         return CompletableFuture.supplyAsync(() -> {
-            Path path = Paths.get(AGB_FILE_PATH);
-            try {
-                byte[] content = Files.readAllBytes(path);
+            try (InputStream inputStream = getClass().getClassLoader().getResourceAsStream(AGB_FILE_PATH)) {
+                if (inputStream == null) {
+                    return ResponseEntity.notFound().build();
+                }
+                byte[] content = inputStream.readAllBytes();
                 return ResponseEntity.ok()
                         .contentType(MediaType.parseMediaType("text/markdown"))
                         .body(content);
-            } catch (IOException e) {
-                System.out.println(e);
+            } catch (Exception e) {
+                System.err.println("Error reading AGB file: " + e.getMessage());
                 return ResponseEntity.notFound().build();
             }
         });
@@ -39,14 +38,16 @@ public class LegalController {
     @Async
     public CompletableFuture<ResponseEntity<byte[]>> getDatenschutz() {
         return CompletableFuture.supplyAsync(() -> {
-            Path path = Paths.get(DATENSCHUTZ_FILE_PATH);
-            try {
-                byte[] content = Files.readAllBytes(path);
+            try (InputStream inputStream = getClass().getClassLoader().getResourceAsStream(DATENSCHUTZ_FILE_PATH)) {
+                if (inputStream == null) {
+                    return ResponseEntity.notFound().build();
+                }
+                byte[] content = inputStream.readAllBytes();
                 return ResponseEntity.ok()
                         .contentType(MediaType.parseMediaType("text/markdown"))
                         .body(content);
-            } catch (IOException e) {
-                System.out.println(e);
+            } catch (Exception e) {
+                System.err.println("Error reading Datenschutz file: " + e.getMessage());
                 return ResponseEntity.notFound().build();
             }
         });
